# NixOsPresentaion

./: .gitignore  README.md
android/: .zcompdump
devbox/: Makefile  README.md  devbox.json
devenv/: Makefile  devenv.nix  devenv.yaml  explain.sql
docker/: Makefile  default.nix  hello-docker.nix
golang/flake/: go.mod  myapp
golang/module/: Makefile  flake.nix  go.mod
incremental_build/: .gdb_history
nix_init/golang/: Makefile  README.md  default.nix
nix_init/node/: README.md  flake.nix
nix_init/python/jupyenv/: Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  flake.nix  kernels.nix
nix_init/python/python-poetry-tutorial/: README.md  flake.nix  pyproject.toml
nix_init/python/sshuttle/: README.md
poetry/: .zcompdump  flake.nix  pyproject.toml
